Update README.md
Testing formatting in regards to instructions